--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,22 +3,27 @@
 
     <item
         android:title="Home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"/>
 
     <item
         android:title="Categories"
+        android:id="@+id/categoryFragment"
         android:icon="@drawable/ic_category"/>
 
     <item
         android:title="Favorites"
+        android:id="@+id/favoriteFragment"
         android:icon="@drawable/ic_favorite"/>
 
     <item
         android:title="Cart"
+        android:id="@+id/cartFragment"
         android:icon="@drawable/ic_cart"/>
 
     <item
         android:title="Profile"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/ic_baseline_person_24"/>
 
 
