--- a/app/src/main/res/layout/base_row_category.xml
+++ b/app/src/main/res/layout/base_row_category.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -12,36 +11,32 @@
             type="com.mdgn.ecommerce.ui.category.CategoryClickListener" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/categoryImageView"
-            android:layout_width="0dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="8dp"
-            android:imageUrl="@{baseKategori.url}"
-            android:scaleType="centerCrop"
-            android:layout_margin="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/categoryHeader"
-            app:srcCompat="@drawable/ic_launcher_background"
-            android:onClick="@{listener::onCategoryClicked}"/>
+        android:layout_height="wrap_content"
+        android:onClick="@{listener::onCategoryClicked}"
+        android:orientation="vertical">
 
         <TextView
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="20sp"
             android:id="@+id/categoryHeader"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@{baseKategori.tittle}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@{baseKategori.tittle}"/>
+
+        <ImageView
+            android:id="@+id/categoryImageView"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:imageUrl="@{baseKategori.url}"
+            android:scaleType="centerCrop"
+            android:layout_margin="5dp" />
+
+    </LinearLayout>
 </layout>
 
