Got SecondCategoryFragment.kt datas

--- a/app/src/main/res/layout/base_row_category.xml
+++ b/app/src/main/res/layout/base_row_category.xml
@@ -18,6 +18,13 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/categoryID"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            android:text="@{String.valueOf(baseKategori.id)}"/>
+
+        <TextView
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="20sp"
