--- a/app/src/main/res/layout/second_row_category.xml
+++ b/app/src/main/res/layout/second_row_category.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="altKategori"
             type="com.mdgn.ecommerce.model.AltKategori" />
 
+        <variable
+            name="listener"
+            type="com.mdgn.ecommerce.ui.category.CategoryClickListener" />
+
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:onClick="@{listener::onCategoryClicked}">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -27,6 +32,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/altcategoryID"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:visibility="gone"
+                    android:text="@{String.valueOf(altKategori.alt_id)}"/>
 
                 <TextView
                     android:id="@+id/altCategoryTittle"
