--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -42,5 +42,17 @@
         <argument
             android:name="categoryID"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_secondCategoryFragment_to_thirdFragment"
+            app:destination="@id/thirdFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/thirdFragment"
+        android:name="com.mdgn.ecommerce.ui.category.ThirdFragment"
+        android:label="fragment_third"
+        tools:layout="@layout/fragment_third" >
+        <argument
+            android:name="altCategoryID"
+            app:argType="integer" />
     </fragment>
 </navigation>
