--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -57,5 +57,13 @@
         <argument
             android:name="categoryID"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_thirdFragment_to_productPageFragment"
+            app:destination="@id/productPageFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/productPageFragment"
+        android:name="com.mdgn.ecommerce.ui.category.adapter.ProductPageFragment"
+        android:label="fragment_product_page"
+        tools:layout="@layout/fragment_product_page" />
 </navigation>
