--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -63,7 +63,7 @@
     </fragment>
     <fragment
         android:id="@+id/productPageFragment"
-        android:name="com.mdgn.ecommerce.ui.category.adapter.ProductPageFragment"
+        android:name="com.mdgn.ecommerce.ui.category.ProductPageFragment"
         android:label="fragment_product_page"
         tools:layout="@layout/fragment_product_page" />
 </navigation>
