--- a/app/src/main/res/layout/fragment_product_page.xml
+++ b/app/src/main/res/layout/fragment_product_page.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.category.ProductPageFragment">
 
-    <ImageView
-        android:id="@+id/imageFromStorage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher_background"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvProduct"
+        android:layout_width="409dp"
+        android:layout_height="657dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
