--- a/app/src/main/res/layout/third_row_category.xml
+++ b/app/src/main/res/layout/third_row_category.xml
@@ -40,6 +40,11 @@
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:id="@+id/altAltCategoryID"
+                    android:text="@{String.valueOf(productListItem.alt_alt_id)}"/>
 
             </LinearLayout>
 
