--- a/app/src/main/res/layout/product_detail.xml
+++ b/app/src/main/res/layout/product_detail.xml
@@ -14,6 +14,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
@@ -66,6 +71,8 @@
                 android:text="@{String.valueOf(productDetail.id)}"
                 android:paddingStart="20dp"/>
 
+
+
             <Button
                 android:id="@+id/addToCartButton"
                 android:layout_width="match_parent"
@@ -73,11 +80,19 @@
                 android:layout_margin="5dp"
                 android:text="Add to Chart"/>
 
-
         </LinearLayout>
 
 
     </LinearLayout>
 
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBar"
+            android:numStars="5"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"/>
+
+    </LinearLayout>
 </layout>
 
